2008-12-13 00:44  yianwillis

	* trunk/doc/various.txt, trunk/doc/version4.txt,
	  trunk/doc/version5.txt, trunk/doc/version6.txt,
	  trunk/doc/version7.txt, trunk/doc/vi_diff.txt,
	  trunk/doc/visual.txt, trunk/doc/windows.txt,
	  trunk/doc/workshop.txt: 7.2 update: various, version4, version5,
	  version6, version7, vi_diff, visual, windows, workshop

2008-12-07 21:11  yianwillis

	* trunk/doc/uganda.txt, trunk/doc/undo.txt, trunk/doc/usr_01.txt,
	  trunk/doc/usr_02.txt, trunk/doc/usr_03.txt, trunk/doc/usr_04.txt,
	  trunk/doc/usr_05.txt, trunk/doc/usr_06.txt, trunk/doc/usr_07.txt,
	  trunk/doc/usr_08.txt, trunk/doc/usr_09.txt, trunk/doc/usr_10.txt,
	  trunk/doc/usr_11.txt, trunk/doc/usr_12.txt, trunk/doc/usr_20.txt,
	  trunk/doc/usr_21.txt, trunk/doc/usr_22.txt, trunk/doc/usr_23.txt,
	  trunk/doc/usr_24.txt, trunk/doc/usr_25.txt, trunk/doc/usr_26.txt,
	  trunk/doc/usr_27.txt, trunk/doc/usr_28.txt, trunk/doc/usr_29.txt,
	  trunk/doc/usr_30.txt, trunk/doc/usr_31.txt, trunk/doc/usr_32.txt,
	  trunk/doc/usr_40.txt, trunk/doc/usr_41.txt, trunk/doc/usr_42.txt,
	  trunk/doc/usr_43.txt, trunk/doc/usr_44.txt, trunk/doc/usr_45.txt,
	  trunk/doc/usr_90.txt, trunk/doc/usr_toc.txt: 7.2 update: uganda,
	  undo, usr_*

2008-11-23 01:39  yianwillis

	* trunk/doc/tabpage.txt, trunk/doc/tagsrch.txt, trunk/doc/term.txt,
	  trunk/doc/tips.txt, trunk/doc/todo.txt: 7.2 update: tabpage,
	  tagsrch, term, tips, todo

2008-11-15 18:11  yianwillis

	* trunk/doc/recover.txt, trunk/doc/remote.txt,
	  trunk/doc/repeat.txt, trunk/doc/rileft.txt,
	  trunk/doc/russian.txt, trunk/doc/scroll.txt, trunk/doc/sign.txt,
	  trunk/doc/spell.txt, trunk/doc/sponsor.txt,
	  trunk/doc/starting.txt, trunk/doc/syntax.txt: 7.2 update:
	  recover, remote, repeat, rileft, russian, scroll, sign, spell,
	  sponsor, starting, syntax

2008-11-08 20:39  yianwillis

	* trunk/doc/quickfix.txt, trunk/doc/quickref.txt,
	  trunk/doc/quotes.txt: 7.2 update: quickfix, quickref, quotes

2008-11-01 22:10  yianwillis
